fixing linkedin spacing

--- a/index.css
+++ b/index.css
@@ -128,7 +128,7 @@ li embed {
 .contact td {
 	border: none;
 	height: 20px;
-	width: 150px;
+	width: 300px;
 }
 
 .projectList p {
